--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -1,3 +1,9 @@
-.text-error {
-    color: rgb(199, 42, 42);
-}
+@media only screen and (max-width: 648px) {
+    .small-width{
+     width: 90%;
+     margin: auto;
+    }
+    .width-responsive{
+        max-width: 295px;
+    }
+   }
