--- a/src/Pages/Shop/Product/Product.css
+++ b/src/Pages/Shop/Product/Product.css
@@ -1,7 +1,7 @@
 .product{
     width: 300px;
     height: 510px;
-    border: 1px solid #95A0A7;
+    border: 1px solid #FFA500;
     border-radius: 8px;
     position: relative;
 }
@@ -28,7 +28,7 @@
 }
 .btn-cart{
     width: 100%;
-    background: #FFE0B3;
+    background: orange;
     border: none;
     border-radius: 0px 0px 8px 8px;
     position: absolute;
